# PEN-BEATS

./: .augmentignore  .gitignore  AGENTS.md  CLAUDE.md  EXTENSIONS.md  README.md  TESTING.md  package-lock.json  pyproject.toml  requirements-cuda.txt
code/: README.md  pyproject.toml
code/experiments/configs/: autoencoder_pure_m4.yaml  comprehensive_m4_paper_sample.yaml  comprehensive_m4_paper_sample_sym10_fills.yaml  comprehensive_sweep_milk.yaml  comprehensive_sweep_tourism.yaml  comprehensive_sweep_weather.yaml  comprehensive_sweep_weather_fm7.yaml  gate_fn_study_weather.yaml  generic_dim_sweep.yaml  kl_weight_sweep_m4.yaml  kl_weight_sweep_weather.yaml  lg_vae_study_m4.yaml  m4_hourly_sym10_tiered_offset.yaml  milk_convergence.yaml  nbeats_ig.yaml  omnibus_benchmark_traffic.yaml  resnet_skip_study_v2_tourism.yaml  resnet_skip_study_v2_weather.yaml  resnet_skip_study_v3.yaml  resnet_skip_study_weather.yaml  test_earlystop_fix.yaml  tiered_offset_m4_allperiods.yaml  trend_seasonality_wavelet_comparison.yaml  trendwavelet_twidth_validation_m4.yaml  trendwavelet_twidth_validation_traffic.yaml  trendwavelet_twidth_validation_weather.yaml  trendwaveletae_pure_m4.yaml  trendwaveletae_v2_traffic_reverse.yaml  trendwaveletae_v2_weather.yaml  trendwaveletaelg_pure_m4.yaml  trendwaveletaelg_pure_v2_tourism.yaml  trendwaveletaelg_pure_v2_weather.yaml  unified_benchmark_milk.yaml  vae2_study_m4_weather.yaml  vae2_study_traffic.yaml  wavelet_study_1.yaml  wavelet_study_3_successive_weather.yaml  wavelet_v3ae_study_tourism.yaml  wavelet_v3ae_study_traffic.yaml  wavelet_v3aelg_trendaelg_traffic_resume.yaml
code/experiments/tools/: llm_commentary.py
code/nbeats/: README.md  conftest.py  pyproject.toml  requirements.txt
code/pellm/: AE_DATASET_CLARIFICATION.md  EXPERIMENT_LAUNCH_COMMANDS.md  LLAMA3_2_1B_ATTENTION_DIAGRAM.md  README.md  TESTING.md  pyproject.toml  run_experiment_dual_gpu.sh
code/tests/: test_models.py
(+629 files in other folders)
