[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lightningnbeats"
version = "0.0.0"
description = "Anonymous code accompanying the NeurIPS 2026 submission. PyTorch Lightning implementation of N-BEATS extended with wavelet basis expansion, autoencoder blocks, and learned-gate variants."
requires-python = ">=3.12,<3.15"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Operating System :: OS Independent",
]
dependencies = [
  "lightning>=2.1.0",
  "matplotlib",
  "numpy",
  "pandas",
  "PyWavelets",
  "scipy",
  "seaborn",
  "tensorboard",
  "torch>=2.1.0",
  "tqdm",
  "statsmodels",
  "PyYAML",
]

[project.optional-dependencies]
xpu = ["intel-extension-for-pytorch"]
wandb = ["wandb"]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
