[project]
name = "pellm"
version = "0.1.0"
description = "Parameter Efficient LLM: HuggingFace-compatible Llama extensions with custom attention projection layers"
requires-python = ">=3.10"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "safetensors>=0.4.0",
    "huggingface-hub>=0.22.0",
    "accelerate>=0.30.0",
    "PyWavelets>=1.4.0",
]

[project.optional-dependencies]
train = [
    "datasets>=2.14.0",
]
experiments = [
    "datasets>=2.14.0",
    "lm-eval[hf]>=0.4.0",
    "pyyaml>=6.0",
    "wandb>=0.16.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pellm*"]
